--- a/myProfile.html
+++ b/myProfile.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" href="styleSignUp.css">
+    <link rel="stylesheet" href="styleMyProfile.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,13 +9,13 @@
 </head>
 <body>
     <header>
-        <nav>
-            <ul>
-                <li><a href="./myProfile.html">My Profile</a></li>
-                <li><a href="./friends.html">Friends</a></li>
-                <li><a href="./index.html">Home</a></li>
-            </ul>
-        </nav>
+            <nav>
+                <ul>
+                    <li><a href="./friends.html">Friends</a></li>
+                    <li><a href="./index.html">Home</a></li>
+                    <li><a href="./signUp.html">Sign Up</a></li>
+                </ul>
+            </nav>
     </header>
     <main>
 
