--- a/index.html
+++ b/index.html
@@ -9,14 +9,20 @@
 </head>
 <body>
     <header>
-        <nav>
-            <ul>
-                <li><a href="./myProfile.html">My Profile</a></li>
-                <li><a href="./friends.html">Friends</a></li>
-                <li><a href="./signUp.html">Sign Up</a></li>
-            </ul>
-        </nav>
-    </header>
+        <div class="logo">
+            <h2>placeholder</h2>
+        </div>
+        
+        <div class="links">
+            <nav>
+                <ul>
+                    <li><a href="./myProfile.html">My Profile</a></li>
+                    <li><a href="./friends.html">Friends</a></li>
+                    <li><a href="./signUp.html">Sign Up</a></li>
+                </ul>
+            </nav>
+        </div>
+        </header>
     <main>
 
     </main>
