--- a/myProfile.html
+++ b/myProfile.html
@@ -9,6 +9,11 @@
 </head>
 <body>
     <header>
+        <div class="logo">
+            <h2>placeholder</h2>
+        </div>
+
+        <div class="links">
             <nav>
                 <ul>
                     <li><a href="./friends.html">Friends</a></li>
@@ -16,6 +21,7 @@
                     <li><a href="./signUp.html">Sign Up</a></li>
                 </ul>
             </nav>
+        </div>
     </header>
     <main>
 
