--- a/friends.html
+++ b/friends.html
@@ -6,17 +6,23 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-</head>
+</head> 
 <body>
     <header>
-        <nav>
-            <ul>
-                <li><a href="./myProfile.html">My Profile</a></li>
-                <li><a href="./index.html">Home</a></li>
-                <li><a href="./signUp.html">Sign Up</a></li>
-            </ul>
-        </nav>
-    </header>
+        <div class="logo">
+            <h2>placeholder</h2>
+        </div>
+
+        <div class="links">
+            <nav>
+                <ul>
+                    <li><a href="./myProfile.html">My Profile</a></li>
+                    <li><a href="./index.html">Home</a></li>
+                    <li><a href="./signUp.html">Sign Up</a></li>
+                </ul>
+            </nav>
+        </div>
+        </header>
     <main>
 
     </main>
