--- a/myProfile.html
+++ b/myProfile.html
@@ -24,7 +24,18 @@
         </div>
     </header>
     <main>
+        <div class="page-name">
+            <h1>Your Profile</h1>
+        </div>
 
+        <div class="profile">
+            <img src="./ben-sweet-2LowviVHZ-E-unsplash.jpg" alt="profile picture" width="100">
+
+            <ul>
+                <li>User_1</li><br>
+                <li><em>Add bio</em></li>
+            </ul>
+        </div>
     </main>
     <footer>
 
