--- a/signUp.html
+++ b/signUp.html
@@ -24,12 +24,11 @@
         </div>
     </header>
     <main>
-        <form action="signUp">
+        <form action="sign-up">
             <div class="form-container">
 
-                <h2>Sign Up For Your  Account</h2>
-
                 <div class="form">
+                    <h2>Sign Up For Your  Account</h2>
                 
                     <label for="username">
                         <input type="text" name="username" placeholder="Enter Your Usename">
