--- a/myProfile.html
+++ b/myProfile.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <div class="logo">
-            <h2>placeholder</h2>
+            <h2>JawBinder</h2>
         </div>
 
         <div class="links">
@@ -32,9 +32,14 @@
             <img src="./ben-sweet-2LowviVHZ-E-unsplash.jpg" alt="profile picture" width="100">
 
             <ul>
-                <li>User_1</li><br>
+                <li><strong>User_1</strong></li><br>
                 <li><em>Add bio</em></li>
             </ul>
+        </div>
+
+        <div class="posts">
+            <a href="./hudson-fega-zDP1pEGkZM4-unsplash.jpg"><img src="./hudson-fega-zDP1pEGkZM4-unsplash.jpg" alt="desert" width="600"></a>
+            <a href="./mikita-yo-GVOJ2B-ktII-unsplash.jpg"><img src="./mikita-yo-GVOJ2B-ktII-unsplash.jpg" alt="mat" width="600" height="400"></a>
         </div>
     </main>
     <footer>
