--- a/signUp.html
+++ b/signUp.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <div class="logo">
-            <h2>placeholder</h2>
+            <h2>JawBinder</h2>
         </div>
 
         <div class="links">
