--- a/friends.html
+++ b/friends.html
@@ -24,7 +24,26 @@
         </div>
         </header>
     <main>
+        <div class="page-name">
+            <h1>Your friends</h1>
+        </div>
 
+        <div class="friends">
+            <div class="friend">
+                <img src="./elefant1.jpg" alt="friend1" width="100">
+                <ul>
+                    <li><strong>Elephant_Queen</strong></li><br>
+                    <li><em>I like elephants</em></li>
+                </ul>
+            </div>
+            <div class="friend2">
+            <img src="./gubbe3.jpg" alt="friend2" width="100">
+            <ul>
+                <li><strong>SteveWilliams</strong></li><br>
+                <li><em>Steve, age 61</em></li>
+            </ul>
+            </div>
+        </div>
     </main>
     <footer>
 
