--- a/friends.html
+++ b/friends.html
@@ -39,7 +39,7 @@
             <div class="friend2">
             <img src="./gubbe3.jpg" alt="friend2" width="100">
             <ul>
-                <li><strong>SteveWilliams</strong></li><br>
+                <li><strong>Steve_Williams</strong></li><br>
                 <li><em>Steve, age 61</em></li>
             </ul>
             </div>
