--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -24,7 +25,38 @@
         </div>
         </header>
     <main>
+        <div class="page-name">
+            <h1>Home</h1>
+        </div>
 
+        <div class="contents">
+            <div class="post1">
+                <a href="./mikita-yo-05xEeq88ibs-unsplash.jpg"><img src="./mikita-yo-05xEeq88ibs-unsplash.jpg" alt="picture" width="400"></a>
+
+                <ul>
+                    <strong>Steve_Williams</strong><br>
+                    A nice picture of the sky
+                </ul>
+            </div>
+            
+            <div class="post2">
+                <a href="./mikita-yo-GVOJ2B-ktII-unsplash.jpg"><img src="./mikita-yo-GVOJ2B-ktII-unsplash.jpg" alt="picture" width="400"></a>
+
+                <ul>
+                    <strong>Elephant_Queen</strong><br>
+                    I ate icecream today
+                </ul>
+            </div>
+
+                <div class="post3">
+                    <a href="./mikita-yo-V1TbyGF4dSQ-unsplash.jpg"><img src="./mikita-yo-V1TbyGF4dSQ-unsplash.jpg" alt="picture" width="400"></a>
+                    <ul>
+
+                        <strong>User_4</strong><br>
+                        Saw this statue with a bird on it
+                    </ul>
+                </div>
+        </div>
     </main>
     <footer>
         
