--- a/myProfile.html
+++ b/myProfile.html
@@ -36,6 +36,10 @@
                 <li><em>Add bio</em></li>
             </ul>
         </div>
+
+        <div class="contents">
+            <h2>You have not made any posts</h2>
+        </div>
     </main>
     <footer>
 
