--- a/myProfile.html
+++ b/myProfile.html
@@ -32,7 +32,7 @@
             <img src="./ben-sweet-2LowviVHZ-E-unsplash.jpg" alt="profile picture" width="100">
 
             <ul>
-                <li><strong>User_1</strong></li><br>
+                <li><strong>Guest_9126</strong></li><br>
                 <li><em>Add bio</em></li>
             </ul>
         </div>
