Now this is the final commit

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
         <div class="contents">
             <div class="post1">
-                <a href="./mikita-yo-05xEeq88ibs-unsplash.jpg"><img src="./mikita-yo-05xEeq88ibs-unsplash.jpg" alt="picture" width="400"></a>
+                <a href="./sky.jpg"><img src="./sky.jpg" alt="picture" width="400" height="600"></a>
 
                 <ul>
                     <strong>Steve_Williams</strong><br>
@@ -40,7 +40,7 @@
             </div>
             
             <div class="post2">
-                <a href="./mikita-yo-GVOJ2B-ktII-unsplash.jpg"><img src="./mikita-yo-GVOJ2B-ktII-unsplash.jpg" alt="picture" width="400"></a>
+                <a href="./icecream.jpg"><img src="./icecream.jpg" alt="picture" width="400" height="600"></a>
 
                 <ul>
                     <strong>Elephant_Queen</strong><br>
@@ -49,11 +49,11 @@
             </div>
 
                 <div class="post3">
-                    <a href="./mikita-yo-V1TbyGF4dSQ-unsplash.jpg"><img src="./mikita-yo-V1TbyGF4dSQ-unsplash.jpg" alt="picture" width="400"></a>
+                    <a href="./statue2.jpg"><img src="./statue2.jpg" alt="picture" width="400" height="600"></a>
 
                     <ul>
                         <strong>User_4</strong><br>
-                        Saw this statue with a bird on it
+                        Saw this vikig statue
                     </ul>
                 </div>
         </div>
